Added login APIs based on JWT tokens